--- a/bitrise.yml
+++ b/bitrise.yml
@@ -28,7 +28,7 @@ workflows:
     envs:
       # if you want to share this step into a StepLib
       - MY_STEPLIB_REPO_FORK_GIT_URL: https://github.com/ataourirt/fbinfer-ios-bitrise.git
-      - STEP_ID_IN_STEPLIB: fbinfer
+      - STEP_ID_IN_STEPLIB: fbinfer-ios
       - STEP_GIT_VERION_TAG_TO_SHARE: 0.1.0
       - STEP_GIT_CLONE_URL: https://github.com/ataourirt/fbinfer-ios-bitrise.git
     description: |-
