--- a/step.yml
+++ b/step.yml
@@ -14,7 +14,7 @@ type_tags:
   - script
 deps:
   brew:
-  - name: infer
+  # - name: infer
 is_requires_admin_user: true
 is_always_run: true
 is_skippable: false
